improved home page

--- a/front_end/index.html
+++ b/front_end/index.html
@@ -55,12 +55,12 @@
 					</div>
 				</a> <!-- #branding -->
 
-				<div class="main-navigation mt-3">
+				<div class="main-navigation mt-2">
 					<button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
 					<ul class="menu">
 						<li class="menu-item current-menu-item"><a href="index.html">Home</a></li>
 						<li class="menu-item"><a href="about.html">About</a></li>
-						<li class="menu-item"><a href="review.html">Movie reviews</a></li>
+						<li class="menu-item"><a href="review.html">Movie Recommendation</a></li>
 						<li class="menu-item"><a href="joinus.html">Join us</a></li>
 						<li class="menu-item"><a href="contact.html">Contact</a></li>
 					</ul> <!-- .menu -->
@@ -77,131 +77,137 @@
 		<main class="main-content">
 			<div class="container">
 				<h1>Recent Viewed</h2>
-				
-				<div class="page">
-					<div class="row">
-						<div class="col-md-9">
-							<div class="slider">
-								<ul class="slides">
-									<li><a href="#"><img src="dummy/1.jpg" alt="Slide 1"></a></li>
-									<li><a href="#"><img src="dummy/2.jpg" alt="Slide 2"></a></li>
-									<li><a href="#"><img src="dummy/3.jpg" alt="Slide 3"></a></li>
-									<li><a href="#"><img src="dummy/4.jpg" alt="Slide 3"></a></li>
-									<li><a href="#"><img src="dummy/5.jpg" alt="Slide 3"></a></li>
-									<li><a href="#"><img src="dummy/6.jpg" alt="Slide 3"></a></li>
-									<li><a href="#"><img src="dummy/7.jpg" alt="Slide 3"></a></li>
-								</ul>
+					<div class="page">
+						<div class="row">
+							<div class="col-md-9">
+								<div class="slider">
+									<ul class="slides">
+										<li><a href="#">
+												<div class="movie">
+													<figure class="movie-poster"><img src="dummy/2.jpg" alt="Slide 1">
+													</figure>
+													<h1 style="text-align: center; "> Don-2</h1>
+												</div>
+											</a></li>
+										<li><a href="#">
+												<div class="movie">
+													<figure class="movie-poster"><img src="dummy/3.jpg" alt="Slide 1">
+													</figure>
+													<h1 style="text-align: center; "> Jab Tak Hai Jaan</h1>
+												</div>
+											</a></li>
+										<li><a href="#">
+												<div class="movie">
+													<figure class="movie-poster"><img src="dummy/4.jpg" alt="Slide 1">
+													</figure>
+													<h1 style="text-align: center; "> Brothers</h1>
+
+												</div>
+											</a></li>
+										<li><a href="#">
+												<div class="movie">
+													<figure class="movie-poster"><img src="dummy/1.jpg" alt="Slide 1">
+													</figure>
+													<h1 style="text-align: center; "> Cocktail</h1>
+												</div>
+											</a></li>
+										<li><a href="#">
+												<div class="movie">
+													<figure class="movie-poster"><img src="dummy/5.jpg" alt="Slide 1">
+													</figure>
+													<h1 style="text-align: center; "> HSKD</h1>
+												</div>
+											</a></li>
+										<li><a href="#">
+												<div class="movie">
+													<figure class="movie-poster"><img src="dummy/6.jpg" alt="Slide 1">
+													</figure>
+													<h1 style="text-align: center; "> Don-2</h1>
+												</div>
+											</a></li>
+										<li><a href="#">
+												<div class="movie">
+													<figure class="movie-poster"><img src="dummy/7.jpg" alt="Slide 1">
+													</figure>
+													<h1 style="text-align: center; "> Don-2</h1>
+												</div>
+											</a></li>
+									</ul>
+								</div>
 							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="row">
-								<div class="col-sm-6 col-md-12 mb-3">
-									<div class="latest-movie">
-										<a href="#"><img src="dummy/8.jpg" alt="Movie 1"></a>
+							<div class="col-md-3">
+								<div class="row">
+									<div class="col-sm-6 col-md-12">
+										<div class="movie">
+											<figure class="movie-poster"><img src="dummy/8.jpg" alt="Slide 1">
+											</figure>
+											<h3 style="text-align: center;" class="mb-1">Don-2</h3>
+										</div>
+									</div>
+									<div class="col-sm-6 col-md-12">
+										<div class="movie">
+											<figure class="movie-poster"><img src="dummy/9.jpg" alt="Slide 1">
+											</figure>
+											<h3 style="text-align: center;" class="mb-1">Hamari Adhuri Kahani</h3>
+
+										</div>
+									</div>
+									<div class="col-sm-6 col-md-12">
+										<div class="movie">
+											<figure class="movie-poster"><img src="dummy/10.jpg" alt="Slide 1">
+											</figure>
+											<h3 style="text-align: center; " class="mb-1">Yeh Javani Hai Deewani</h3>
+										</div>
 									</div>
 								</div>
-								<div class="col-sm-6 col-md-12">
-									<div class="latest-movie">
-										<a href="#"><img src="dummy/10.jpg" alt="Movie 2"></a>
-									</div>
+							</div>
+						</div> <!-- .row -->
+					</div>
+					<section>
+						<h1> Most Popular</h1>
+						<div class="slider-box">
+							<amp-carousel class="carousel mb-4" height="340" layout="fixed-height" type="carousel">
+								<div class="movie">
+									<figure class="movie-poster"><img src="dummy/movie_review_1.jpg" alt="#"></figure>
+									<div class="movie-title"><a href="single.html">Maleficient</a></div>
 								</div>
-								<div class="col-sm-6 col-md-12 mb-2">
-									<div class="latest-movie">
-										<a href="#"><img src="dummy/9.jpg" alt="Movie 2"></a>
-									</div>
+								<div class="movie">
+									<figure class="movie-poster"><img src="dummy/movie_review_2.jpg" alt="#"></figure>
+									<div class="movie-title"><a href="single.html">Tintin</a></div>
 								</div>
-							</div>
+								<div class="movie">
+									<figure class="movie-poster"><img src="dummy/movie_review_3.jpg" alt="#"></figure>
+									<div class="movie-title"><a href="single.html">Hobbit</a></div>
+								</div>
+								<div class="movie">
+									<figure class="movie-poster"><img src="dummy/movie_review_4.jpg" alt="#"></figure>
+									<div class="movie-title"><a href="single.html">Exists</a></div>
+								</div>
+								<div class="movie">
+									<figure class="movie-poster"><img src="dummy/movie_review_5.jpg" alt="#"></figure>
+									<div class="movie-title"><a href="single.html">Drive hard</a></div>
+								</div>
+								<div class="movie">
+									<figure class="movie-poster"><img src="dummy/movie_review_6.jpg" alt="#"></figure>
+									<div class="movie-title"><a href="single.html">Robocop</a></div>
+								</div>
+								<div class="movie">
+									<figure class="movie-poster"><img src="dummy/movie_review_7.jpg" alt="#"></figure>
+									<div class="movie-title"><a href="single.html">Life of Pi</a></div>
+								</div>
+								<div class="movie">
+									<figure class="movie-poster"><img src="dummy/movie_review_8.jpg" alt="#"></figure>
+									<div class="movie-title"><a href="single.html">The Colony</a></div>
+								</div>
+							</amp-carousel>
 						</div>
-					</div> <!-- .row -->
-				</div>
-				<h1> Most Popular</h1>
-				<div class="slider-box">
-					<amp-carousel class="carousel" height="200" layout="fixed-height" type="carousel">
-						<a href="">
-							<amp-img class="carousel-img" src="dummy/11.jpg" height="200" width="300" alt="Mobirise">
-
-						</a>
-						<div placeholder="">
-							<div class="mobirise-spinner">
-								<em></em>
-								<em></em>
-								<em></em>
-							</div>
-						</div>
-
-						</amp-img>
-						<a href="">
-							<amp-img class="carousel-img" src="dummy/12.jpg" height="200" width="300" alt="Mobirise">
-
-						</a>
-
-						<div placeholder="">
-							<div class="mobirise-spinner">
-								<em></em>
-								<em></em>
-								<em></em>
-							</div>
-						</div>
-
-						</amp-img>
-						<a href="">
-							<amp-img class="carousel-img" src="dummy/13.jpg" height="200" width="300" alt="Mobirise">
-						</a>
-						<div placeholder="">
-							<div class="mobirise-spinner">
-								<em></em>
-								<em></em>
-								<em></em>
-							</div>
-						</div>
-
-						</amp-img>
-						<a href="">
-							<amp-img class="carousel-img" src="dummy/14.jpg" height="200" width="300" alt="Mobirise">
-
-						</a>
-						<div placeholder="">
-							<div class="mobirise-spinner">
-								<em></em>
-								<em></em>
-								<em></em>
-							</div>
-						</div>
-
-						</amp-img>
-						<a href="">
-							<amp-img class="carousel-img" src="dummy/15.jpg" height="200" width="300" alt="Mobirise">
-
-						</a>
-
-						<div placeholder="">
-							<div class="mobirise-spinner">
-								<em></em>
-								<em></em>
-								<em></em>
-							</div>
-						</div>
-
-						</amp-img>
-						<a href="">
-							<amp-img class="carousel-img" src="dummy/16.jpg" height="200" width="300" alt="Mobirise">
-
-						</a>
-						<div placeholder="">
-							<div class="mobirise-spinner">
-								<em></em>
-								<em></em>
-								<em></em>
-							</div>
-						</div>
-						</amp-img>
-					</amp-carousel>
 					</section>
 
 					<div class="row mt-3">
 						<div class="col-md-4">
 							<h2 class="section-title">December premiere</h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt
+							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor
+								incididunt
 								ut labore.</p>
 							<ul class="movie-schedule">
 								<li>
@@ -224,7 +230,8 @@
 						</div>
 						<div class="col-md-4">
 							<h2 class="section-title">November premiere</h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt
+							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor
+								incididunt
 								ut labore.</p>
 							<ul class="movie-schedule">
 								<li>
@@ -247,7 +254,8 @@
 						</div>
 						<div class="col-md-4">
 							<h2 class="section-title">October premiere</h2>
-							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt
+							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor
+								incididunt
 								ut labore.</p>
 							<ul class="movie-schedule">
 								<li>
@@ -269,94 +277,94 @@
 							</ul> <!-- .movie-schedule -->
 						</div>
 					</div>
-				</div>
-			</div> <!-- .container -->
-		</main>
-		<footer class="page-footer font-small ">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 mb-4 mt-3">
-						<form class="form-inline">
-							<input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
-								aria-label="Search">
-							<i class="fas fa-search" aria-hidden="true"></i>
-						</form>
-					</div>
-					<div class="col-md-6 mb-4 mt-3">
-
-						<form class="input-group">
-							<input type="text" class="form-control form-control-sm" placeholder="Your email"
-								aria-label="Your email" aria-describedby="basic-addon2">
-							<div class="input-group-append">
-								<button class="btn btn-sm btn-outline-white my-0" type="button">Sign up</button>
-							</div>
-						</form>
-					</div>
-				</div>
-				<div class="row text-center d-flex justify-content-center pt-5 mb-3">
-					<div class="col-md-2 mb-3">
-						<h3 class="text-uppercase font-weight-bold ">
-							<a href="about.html">About us</a>
-						</h3>
-					</div>
-					<div class="col-md-2 mb-3">
-						<h3 class="text-uppercase font-weight-bold">
-							<a href="contact.html">Contact Us</a>
-						</h3>
-					</div>
-					<div class="col-md-2 mb-3">
-						<h3 class="text-uppercase font-weight-bold">
-							<a href="joinus.html">Join Us</a>
-						</h3>
-					</div>
-					<div class="col-md-2 mb-3">
-						<h3 class="text-uppercase font-weight-bold">
-							<a href="#!">Help</a>
-						</h3>
-					</div>
-					<div class="col-md-2 mb-3">
-						<h3 class="text-uppercase font-weight-bold">
-							<a href="#!">Contact</a>
-						</h3>
-					</div>
-				</div>
-				<hr class="rgba-white-light" style="margin: 0 15%;">
-				<div class="	row d-flex text-center justify-content-center mb-md-0 mb-4">
-					<div class="col-md-8 col-12 mt-5">
-						<p style="line-height: 1.7rem">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
-							quae consectetur nulla officiis sapiente! Reiciendis, harum, quo velit, explicabo laudantium
-							obcaecati saepe sunt odit atque ea eos optio blanditiis. Aperiam..</p>
-					</div>
-				</div>
-				<hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
-				<div class="col-md-12 py-2">
-					<div class="mb-5 flex-center">
-						<a class="fb-ic">
-							<i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-						</a>
-						<a class="tw-ic">
-							<i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-						</a>
-						<a class="gplus-ic">
-							<i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-						</a>
-						<a class="li-ic">
-							<i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-						</a>
-						<a class="ins-ic">
-							<i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-						</a>
-						<a class="pin-ic">
-							<i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-						</a>
-					</div>
-				</div>
-
 			</div>
-			<div class="footer-copyright text-center py-3">© 2020 Copyright:
-				<a href="#"> RHM.com</a>
+	</div> <!-- .container -->
+	</main>
+	<footer class="page-footer font-small ">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 mb-4 mt-3">
+					<form class="form-inline">
+						<input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
+							aria-label="Search">
+						<i class="fas fa-search" aria-hidden="true"></i>
+					</form>
+				</div>
+				<div class="col-md-6 mb-4 mt-3">
+
+					<form class="input-group">
+						<input type="text" class="form-control form-control-sm" placeholder="Your email"
+							aria-label="Your email" aria-describedby="basic-addon2">
+						<div class="input-group-append">
+							<button class="btn btn-sm btn-outline-white my-0" type="button">Sign up</button>
+						</div>
+					</form>
+				</div>
 			</div>
-		</footer>
+			<div class="row text-center d-flex justify-content-center pt-5 mb-3">
+				<div class="col-md-2 mb-3">
+					<h3 class="text-uppercase font-weight-bold ">
+						<a href="about.html">About us</a>
+					</h3>
+				</div>
+				<div class="col-md-2 mb-3">
+					<h3 class="text-uppercase font-weight-bold">
+						<a href="contact.html">Contact Us</a>
+					</h3>
+				</div>
+				<div class="col-md-2 mb-3">
+					<h3 class="text-uppercase font-weight-bold">
+						<a href="joinus.html">Join Us</a>
+					</h3>
+				</div>
+				<div class="col-md-2 mb-3">
+					<h3 class="text-uppercase font-weight-bold">
+						<a href="#!">Help</a>
+					</h3>
+				</div>
+				<div class="col-md-2 mb-3">
+					<h3 class="text-uppercase font-weight-bold">
+						<a href="#!">Contact</a>
+					</h3>
+				</div>
+			</div>
+			<hr class="rgba-white-light" style="margin: 0 15%;">
+			<div class="	row d-flex text-center justify-content-center mb-md-0 mb-4">
+				<div class="col-md-8 col-12 mt-5">
+					<p style="line-height: 1.7rem">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque
+						quae consectetur nulla officiis sapiente! Reiciendis, harum, quo velit, explicabo laudantium
+						obcaecati saepe sunt odit atque ea eos optio blanditiis. Aperiam..</p>
+				</div>
+			</div>
+			<hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
+			<div class="col-md-12 py-2">
+				<div class="mb-5 flex-center">
+					<a class="fb-ic">
+						<i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+					</a>
+					<a class="tw-ic">
+						<i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+					</a>
+					<a class="gplus-ic">
+						<i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+					</a>
+					<a class="li-ic">
+						<i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+					</a>
+					<a class="ins-ic">
+						<i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+					</a>
+					<a class="pin-ic">
+						<i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
+					</a>
+				</div>
+			</div>
+
+		</div>
+		<div class="footer-copyright text-center py-3">© 2020 Copyright:
+			<a href="#"> RHM.com</a>
+		</div>
+	</footer>
 	</div>
 	<!-- Default snippet for navigation -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
