Added Movie Review page for individual movie

--- a/front_end/Home.html
+++ b/front_end/Home.html
@@ -39,7 +39,7 @@
 
 	<link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
 	<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style/style.css">
 
 </head>
 
@@ -47,7 +47,7 @@
 	<div id="site-content">
 		<header class="site-header">
 			<div class="container">
-				<a href="index.html" id="branding">
+				<a href="home.html" id="branding">
 					<img src="images/logo.png" alt="" class="logo">
 					<div class="logo-copy">
 						<h1 class="site-title">PRM</h1>
@@ -58,7 +58,7 @@
 				<div class="main-navigation mt-2">
 					<button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
 					<ul class="menu">
-						<li class="menu-item current-menu-item"><a href="index.html">Home</a></li>
+						<li class="menu-item current-menu-item"><a href="home.html">Home</a></li>
 						<li class="menu-item"><a href="about.html">About</a></li>
 						<li class="menu-item"><a href="review.html">Movie Recommendation</a></li>
 						<li class="menu-item"><a href="joinus.html">Join us</a></li>
@@ -82,21 +82,21 @@
 							<div class="col-md-9">
 								<div class="slider">
 									<ul class="slides">
-										<li><a href="#">
+										<li><a href="MovieReview.html">
 												<div class="movie">
 													<figure class="movie-poster"><img src="dummy/2.jpg" alt="Slide 1">
 													</figure>
 													<h1 style="text-align: center; "> Don-2</h1>
 												</div>
 											</a></li>
-										<li><a href="#">
+										<li><a href="MovieReview.html">
 												<div class="movie">
 													<figure class="movie-poster"><img src="dummy/3.jpg" alt="Slide 1">
 													</figure>
 													<h1 style="text-align: center; "> Jab Tak Hai Jaan</h1>
 												</div>
 											</a></li>
-										<li><a href="#">
+										<li><a href="MovieReview.html">
 												<div class="movie">
 													<figure class="movie-poster"><img src="dummy/4.jpg" alt="Slide 1">
 													</figure>
@@ -104,28 +104,28 @@
 
 												</div>
 											</a></li>
-										<li><a href="#">
+										<li><a href="MovieReview.html">
 												<div class="movie">
 													<figure class="movie-poster"><img src="dummy/1.jpg" alt="Slide 1">
 													</figure>
 													<h1 style="text-align: center; "> Cocktail</h1>
 												</div>
 											</a></li>
-										<li><a href="#">
+										<li><a href="MovieReview.html">
 												<div class="movie">
 													<figure class="movie-poster"><img src="dummy/5.jpg" alt="Slide 1">
 													</figure>
 													<h1 style="text-align: center; "> HSKD</h1>
 												</div>
 											</a></li>
-										<li><a href="#">
+										<li><a href="MovieReview.html">
 												<div class="movie">
 													<figure class="movie-poster"><img src="dummy/6.jpg" alt="Slide 1">
 													</figure>
 													<h1 style="text-align: center; "> Don-2</h1>
 												</div>
 											</a></li>
-										<li><a href="#">
+										<li><a href="MovieReview.html">
 												<div class="movie">
 													<figure class="movie-poster"><img src="dummy/7.jpg" alt="Slide 1">
 													</figure>
@@ -168,36 +168,44 @@
 						<div class="slider-box">
 							<amp-carousel class="carousel mb-4" height="340" layout="fixed-height" type="carousel">
 								<div class="movie">
-									<figure class="movie-poster"><img src="dummy/movie_review_1.jpg" alt="#"></figure>
-									<div class="movie-title"><a href="single.html">Maleficient</a></div>
+									<figure class="movie-poster"><img src="dummy/movie_review_1.jpg" alt="#">
+									</figure>
+									<div class="movie-title"><a href="MovieReview.html">Maleficient</a></div>
 								</div>
 								<div class="movie">
-									<figure class="movie-poster"><img src="dummy/movie_review_2.jpg" alt="#"></figure>
-									<div class="movie-title"><a href="single.html">Tintin</a></div>
+									<figure class="movie-poster"><img src="dummy/movie_review_2.jpg" alt="#">
+									</figure>
+									<div class="movie-title"><a href="MovieReview.html">Maleficient</a></div>
 								</div>
 								<div class="movie">
-									<figure class="movie-poster"><img src="dummy/movie_review_3.jpg" alt="#"></figure>
-									<div class="movie-title"><a href="single.html">Hobbit</a></div>
+									<figure class="movie-poster"><img src="dummy/movie_review_3.jpg" alt="#">
+									</figure>
+									<div class="movie-title"><a href="MovieReview.html">Maleficient</a></div>
 								</div>
 								<div class="movie">
-									<figure class="movie-poster"><img src="dummy/movie_review_4.jpg" alt="#"></figure>
-									<div class="movie-title"><a href="single.html">Exists</a></div>
+									<figure class="movie-poster"><img src="dummy/movie_review_4.jpg" alt="#">
+									</figure>
+									<div class="movie-title"><a href="MovieReview.html">Maleficient</a></div>
 								</div>
 								<div class="movie">
-									<figure class="movie-poster"><img src="dummy/movie_review_5.jpg" alt="#"></figure>
-									<div class="movie-title"><a href="single.html">Drive hard</a></div>
+									<figure class="movie-poster"><img src="dummy/movie_review_5.jpg" alt="#">
+									</figure>
+									<div class="movie-title"><a href="MovieReview.html">Maleficient</a></div>
 								</div>
 								<div class="movie">
-									<figure class="movie-poster"><img src="dummy/movie_review_6.jpg" alt="#"></figure>
-									<div class="movie-title"><a href="single.html">Robocop</a></div>
+									<figure class="movie-poster"><img src="dummy/movie_review_6.jpg" alt="#">
+									</figure>
+									<div class="movie-title"><a href="MovieReview.html">Maleficient</a></div>
 								</div>
 								<div class="movie">
-									<figure class="movie-poster"><img src="dummy/movie_review_7.jpg" alt="#"></figure>
-									<div class="movie-title"><a href="single.html">Life of Pi</a></div>
+									<figure class="movie-poster"><img src="dummy/movie_review_7.jpg" alt="#">
+									</figure>
+									<div class="movie-title"><a href="MovieReview.html">Maleficient</a></div>
 								</div>
 								<div class="movie">
-									<figure class="movie-poster"><img src="dummy/movie_review_8.jpg" alt="#"></figure>
-									<div class="movie-title"><a href="single.html">The Colony</a></div>
+									<figure class="movie-poster"><img src="dummy/movie_review_8.jpg" alt="#">
+									</figure>
+									<div class="movie-title"><a href="MovieReview.html">Maleficient</a></div>
 								</div>
 							</amp-carousel>
 						</div>
@@ -319,12 +327,12 @@
 				</div>
 				<div class="col-md-2 mb-3">
 					<h3 class="text-uppercase font-weight-bold">
-						<a href="#!">Help</a>
+						<a href="help.html">Help</a>
 					</h3>
 				</div>
 				<div class="col-md-2 mb-3">
 					<h3 class="text-uppercase font-weight-bold">
-						<a href="#!">Contact</a>
+						<a href="Contact">Contact</a>
 					</h3>
 				</div>
 			</div>
@@ -339,7 +347,7 @@
 			<hr class="clearfix d-md-none rgba-white-light" style="margin: 10% 15% 5%;">
 			<div class="col-md-12 py-2">
 				<div class="mb-5 flex-center">
-					<a class="fb-ic">
+					<a href="https://www.facebook.com/Harshit-Dixit-1920927208210032" class="fb-ic">
 						<i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
 					</a>
 					<a class="tw-ic">
