--- a/front_end/MovieReview.html
+++ b/front_end/MovieReview.html
@@ -46,7 +46,7 @@
 <body>
     <div id="site-content">
         <header class="site-header">
-            <div class="container fixed-top" style="background-color: black;">
+            <div class="container ">
                 <a href="home.html" id="branding">
                     <img src="images/logo.png" alt="" class="logo">
                     <div class="logo-copy">
